@@ -1,5 +1,12 @@
 2008-01-25  Jens Granseuer  <jensgr@gmx.net>
 
+	Patch by: Luca Ferretti <elle.uca@libero.it>
+
+	* gnome-mouse-accessibility.c: (populate_gesture_combo): fix HIG
+	compliance and add some comments for translators (bug #510136)
+
+2008-01-25  Jens Granseuer  <jensgr@gmx.net>
+
 	* Makefile.am:
 	* mouse-left.png:
 	* mouse-right.png: remove obsolete icons
